@@ -1,3 +1,7 @@
+Sat Feb 22 20:04:41 2014  Kouhei Sutou  <kou@cozmixng.org>
+
+	* test/rexml/listener.rb: Untabify.
+
 Sat Feb 22 19:07:31 2014  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* ext/io/console/console.c (console_dev): need read access for conout$
